--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,8 @@ h1{
  font-family: Big Shoulders Display;
   font-size: 2.5rem;
   font-weight: 700;
-  color: var(--very-light-grey); 
+  color: var(--very-light-grey);
+}
 h2{
   font-family: Big Shoulders Display;
   font-size: 2.5rem;
